# ReactMUIOpenCV

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ENVIRONMENT.md  LICENSE  MasterPlan.md  PROJECT_MAP.md  README.md  TODO.md  build.ps1
.agents/skills/code-review-agent/: SKILL.md
.agents/skills/code-review-agent/agents/: openai.yaml
.agents/skills/cpp/: SKILL.md
.agents/skills/cpp-opencv-backend/: SKILL.md
.agents/skills/cpp-opencv-backend/agents/: openai.yaml
.agents/skills/cpp-opencv-backend/references/: backend-cpp-practices.md
.agents/skills/cpp/agents/: openai.yaml
.agents/skills/memory-leak-review-agent/: SKILL.md
.agents/skills/memory-leak-review-agent/agents/: openai.yaml
.agents/skills/project-structure-review-agent/: SKILL.md
.agents/skills/project-structure-review-agent/agents/: openai.yaml
.agents/skills/react-cpp-vision-platform/: SKILL.md
.agents/skills/react-cpp-vision-platform/agents/: openai.yaml
.agents/skills/react-cpp-vision-platform/references/: project-contract.md
.agents/skills/react-mui-frontend/: SKILL.md
.agents/skills/react-mui-frontend/agents/: openai.yaml
.agents/skills/security-review-agent/: SKILL.md
.agents/skills/security-review-agent/agents/: openai.yaml
.agents/skills/webview2-lan-runtime/: SKILL.md
.agents/skills/webview2-lan-runtime/agents/: openai.yaml
backend/: CMakeLists.txt  CMakePresets.json  vcpkg.json
backend/src/: main.cpp
backend/src/app/: AppContext.cpp  AppContext.h
backend/src/common/: Constants.h  HttpUtils.cpp  HttpUtils.h  JsonUtils.h  OpenCvUtils.cpp  OpenCvUtils.h  Random.cpp  Random.h  StringUtils.cpp  StringUtils.h  Time.cpp  Time.h
backend/src/host/: WebViewHost.cpp
backend/src/image/: DnnModelCatalog.cpp  DnnModelCatalog.h  ImageDnnFilters.cpp  ImageDnnFilters.h  ImageFilters.cpp  ImageFilters.h  ImageResultStore.cpp  ImageResultStore.h
backend/src/jobs/: JobQueue.cpp  JobQueue.h
backend/src/logging/: LogStore.cpp  LogStore.h
backend/src/security/: RemoteAccessManager.cpp  RemoteAccessManager.h
backend/src/server/: ApiServer.cpp  ApiServer.h  ApiServerVisionRoutes.cpp  EventHub.cpp  EventHub.h  NetworkInfo.cpp  NetworkInfo.h  WebSocketGateway.cpp  WebSocketGateway.h
backend/src/storage/: CalibrationStore.cpp  CalibrationStore.h  PerformanceBenchmarkStore.cpp  PerformanceBenchmarkStore.h  PipelineStore.cpp  PipelineStore.h  SettingsStore.cpp  SettingsStore.h  VideoDiagnosticsStore.cpp  VideoDiagnosticsStore.h  VideoTrackingStore.cpp  VideoTrackingStore.h
backend/src/video/: VideoService.cpp  VideoService.h
backend/src/vision/: CalibrationService.cpp  CalibrationService.h  ContourExtractionService.cpp  ContourExtractionService.h  PerformanceBenchmarkService.cpp  PerformanceBenchmarkService.h  PipelineExecutor.cpp  PipelineExecutor.h  TesseractOcr.cpp  TesseractOcr.h
docs/: BUILD_AND_DEBUG_POLICY.md  CODING_GUIDE.md  CONTOUR_EXTRACTOR.md  DEVELOPER_SETUP_GUIDE.md  OPENCV_README_SAMPLE_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PIPELINE_SCHEMA.md  PUBLISHING.md  USER_GUIDE.md
frontend/: .npmrc  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  contourApi.ts  filesApi.ts  imageApi.ts  jobsApi.ts  logsApi.ts  performanceApi.ts  pipelineApi.ts  remoteApi.ts  settingsApi.ts  videoApi.ts  wsClient.ts
frontend/src/app/: BackendEventBridge.tsx  providers.tsx  router.tsx
frontend/src/features/chart-showcase/: ChartShowcasePage.tsx
frontend/src/features/contour-extractor/: ContourExtractorPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/data-grid/: DataGridPage.tsx
frontend/src/features/image-lab/: ImageLabPage.tsx  ImageOperationControls.tsx  imageOperations.ts
frontend/src/features/performance-lab/: PerformanceLabPage.tsx
frontend/src/features/pipeline-flow/: PipelineFlowPage.tsx  pipelineOptions.ts
frontend/src/features/remote-access/: RemoteAccessPage.tsx
frontend/src/runtime/: fileAdapter.ts  runtimeMode.ts
frontend/src/store/: useImageLabStore.ts
frontend/src/theme/: AppThemeProvider.tsx  ThemeModeContext.ts  components.ts  createAppTheme.ts  index.ts  themeMode.ts  tokens.ts
models/dnn/: README.md
models/tessdata/: README.md
scripts/: bootstrap.ps1  build-backend.ps1  build.ps1  check-format.ps1  configure-backend.ps1  ensure-frontend-deps.ps1  format.ps1  install-windows-prereqs.ps1  prepare-debug.ps1  publish.ps1  run-backend.ps1  script-utils.ps1  setup-vcpkg.ps1  setup-webview2-sdk.ps1  start.ps1
(+6 files in other folders)
